fix: default dark mode

--- a/src/app.css
+++ b/src/app.css
@@ -12,4 +12,5 @@
 html {
 	font-family: 'Oswald';
 	@apply text-gold bg-black;
+	color-scheme: dark;
 }
